<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp">
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:layout_marginStart="16dp"
                  android:layout_marginTop="16dp">
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <ImageView
                    android:id="@+id/cat_photo"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:scaleType="centerInside"
                    android:cropToPadding="true"
                    android:background="@android:color/darker_gray"/>
            <ImageButton
                    android:id="@+id/cat_camera"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@android:drawable/ic_menu_camera"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">
            <TextView
                    style="?android:listSeparatorTextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cat_name_label"/>
            <EditText
                    android:id="@+id/cat_name_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cat_name"
                    android:layout_margin="16dp"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">
        <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/cat_color_label"/>
        <Spinner
                android:layout_width="wrap_content"
                android:layout_height="match_parent" android:id="@+id/cat_color_spinner"
                android:layout_margin="16dp"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">
        <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/cat_eye_color"/>
        <Spinner
                android:layout_width="wrap_content"
                android:layout_height="match_parent" android:id="@+id/cat_eye_color_spinner"
                android:layout_margin="16dp"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">
        <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/cat_size"/>
        <Spinner
                android:layout_width="wrap_content"
                android:layout_height="match_parent" android:id="@+id/cat_size_spinner"
                android:layout_margin="16dp"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">
        <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/cat_city"/>
        <Spinner
                android:layout_width="wrap_content"
                android:layout_height="match_parent" android:id="@+id/cat_city_spinner"
                android:layout_margin="16dp"/>
    </LinearLayout>
    <CheckBox
            android:id="@+id/is_homeless_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/is_homeless"/>
    <Button
            android:id="@+id/save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_kitty"/>
</LinearLayout>